# rusty-painter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust-r.yml
benches/: brush_bench.rs  simd_bench.rs
src/: brush.rs  canvas.rs  color.rs  gpu_painter.rs  history.rs  lib.rs  main.rs  profiler.rs  ui.rs  vector.rs
src/app/: input_handler.rs  layout.rs  mod.rs  painter.rs  render_helper.rs  state.rs  tools.rs
src/brush_engine/: brush.rs  brush_options.rs  hardness.rs  mod.rs  stroke.rs
src/canvas/: canvas.rs  history.rs  mod.rs
src/selection/: mod.rs  transform.rs
src/shaders/: brush.wgsl  quad.wgsl  square_brush.wgsl
src/styling/: mod.rs
src/tablet/: mod.rs
src/ui/: brush_list.rs  brush_settings.rs  canvas_creation.rs  color_picker.rs  export_modal.rs  general_settings.rs  layers.rs  mod.rs  top_bar.rs
src/utils/: color.rs  exporter.rs  mod.rs  profiler.rs  vector.rs
