[package]
name = "rusty-painter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29.1"
env_logger = "0.10"
log = "0.4"
rand = "0.9.2"
rayon = "1.9"
wgpu = "22.1"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
egui-wgpu = "0.29"
egui-winit = "0.29"
glam = "0.27"


[profile.release]
opt-level = 2
[profile.dev.package."*"]
opt-level = 2
