[package]
name = "rusty-painter"
version = "0.0.1"
authors = ["Valentin Belougne <valentin.belougne@gmail.com>"]
edition = "2024"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]




[dependencies]
eframe = "0.29.1"
env_logger = "0.11.8"
log = "0.4"
rand = "0.9.2"
rayon = "1.9"
image = "0.25.9"
rfd = "0.14"

[dev-dependencies]
criterion = "0.5"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
serde = "1.0.228"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)



[profile.release]
opt-level = 2
[profile.dev.package."*"]
opt-level = 2

[[bench]]
name = "brush_bench"
harness = false
